# netcircle-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: auth.py  task.py  user.py
api/models/: user.py
api/routers/: auth.py  task.py  user.py
api/schemas/: auth.py  task.py  user.py
tests/: test_main.py
